QLWithCheck/src/ql_obj_alg_extended/parsers/antlr4_generated_parser/QLCheckedParser.java
// Generated from QLChecked.g4 by ANTLR 4.2

package ql_obj_alg_extended.parsers.antlr4_generated_parser;
import ql_obj_alg.types.TypeFactory;
import ql_obj_alg.object_algebra_interfaces.IExpAlg;
import ql_obj_alg.object_algebra_interfaces.IFormAlg;
import ql_obj_alg.object_algebra_interfaces.IStmtAlg;
import ql_obj_alg.parsers.parser.IQLParser;
import ql_obj_alg.parsers.parser.proxy.BuilderHandler;
import ql_obj_alg_extended.object_algebra_interfaces.IExpAlgWithCheck;
import ql_obj_alg_extended.object_algebra_interfaces.IStmtAlgWithCheck;

import java.util.ArrayList;
import java.lang.reflect.Proxy;
import java.util.List;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QLCheckedParser extends Parser implements IQLParser{
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__4=1, T__3=2, T__2=3, T__1=4, T__0=5, BOOL=6, PROPERTY=7, TYPE=8, INT=9, 
		STRING=10, ID=11, COMMENT=12, WS=13, MUL=14, DIV=15, MIN=16, ADD=17, EQ=18, 
		LT=19, LEQ=20, GT=21, GEQ=22, NEQ=23, AND=24, OR=25, NOT=26, LP=27, RP=28, 
		LB=29, RB=30;
	public static final String[] tokenNames = {
		"<INVALID>", "'form'", "':'", "'if'", "'else'", "'$'", "BOOL", "PROPERTY", 
		"TYPE", "INT", "STRING", "ID", "COMMENT", "WS", "'*'", "'/'", "'-'", "'+'", 
		"'=='", "'<'", "'<='", "'>'", "'>='", "'!='", "'&&'", "'||'", "'!'", "'('", 
		"')'", "'{'", "'}'"
	};
	public static final int
		RULE_form = 0, RULE_stat = 1, RULE_question = 2, RULE_checked_question = 3, 
		RULE_assign = 4, RULE_check = 5, RULE_ifstat = 6, RULE_elsestat = 7, RULE_expr = 8, 
		RULE_check_expr = 9;
	public static final String[] ruleNames = {
		"form", "stat", "question", "checked_question", "assign", "check", "ifstat", 
		"elsestat", "expr", "check_expr"
	};

	@Override
	public String getGrammarFileName() { return "QLChecked.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		IFormAlg formBuilder = (IFormAlg) Proxy.newProxyInstance(IFormAlg.class.getClassLoader(),new Class[]{IFormAlg.class},new BuilderHandler());
		IStmtAlgWithCheck stmtBuilder = (IStmtAlgWithCheck)Proxy.newProxyInstance(IStmtAlgWithCheck.class.getClassLoader(),new Class[]{IStmtAlgWithCheck.class},new BuilderHandler());
		IExpAlgWithCheck exprBuilder = (IExpAlgWithCheck) Proxy.newProxyInstance(IExpAlgWithCheck.class.getClassLoader(),new Class[]{IExpAlgWithCheck.class},new BuilderHandler());
		
		protected List<Object> composeStmt(List<QLCheckedParser.StatContext> antlr4StmtList){
			List<Object> stmtList = new ArrayList<Object>();
			for(QLCheckedParser.StatContext stmt : antlr4StmtList)
			{
				stmtList.add(stmt.stmt);
			}
			return stmtList;
		}
		
		@Override
		public Object getExpressions() {
			return this.expr().exp;
		}

		@Override
		public Object getStatements() {
			return this.stat().stmt;
		}

		@Override
		public Object getForm() {
			return this.form().frm;
		}


	public QLCheckedParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FormContext extends ParserRuleContext {
		public Object frm;
		public Token ID;
		public StatContext stat;
		public List<StatContext> a = new ArrayList<StatContext>();
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode LB() { return getToken(QLCheckedParser.LB, 0); }
		public TerminalNode RB() { return getToken(QLCheckedParser.RB, 0); }
		public TerminalNode ID() { return getToken(QLCheckedParser.ID, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public FormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_form; }
	}

	public final FormContext form() throws RecognitionException {
		FormContext _localctx = new FormContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_form);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20); match(1);
			setState(21); ((FormContext)_localctx).ID = match(ID);
			setState(22); match(LB);
			setState(24); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(23); ((FormContext)_localctx).stat = stat();
				((FormContext)_localctx).a.add(((FormContext)_localctx).stat);
				}
				}
				setState(26); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==3 || _la==ID );
			setState(28); match(RB);
			((FormContext)_localctx).frm =  formBuilder.form((((FormContext)_localctx).ID!=null?((FormContext)_localctx).ID.getText():null),composeStmt(((FormContext)_localctx).a));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public Object stmt;
		public QuestionContext question;
		public Checked_questionContext checked_question;
		public IfstatContext ifstat;
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public IfstatContext ifstat() {
			return getRuleContext(IfstatContext.class,0);
		}
		public Checked_questionContext checked_question() {
			return getRuleContext(Checked_questionContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(40);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(31); ((StatContext)_localctx).question = question();
				((StatContext)_localctx).stmt =  ((StatContext)_localctx).question.stmt;
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(34); ((StatContext)_localctx).checked_question = checked_question();
				((StatContext)_localctx).stmt =  ((StatContext)_localctx).checked_question.stmt;
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(37); ((StatContext)_localctx).ifstat = ifstat();
				((StatContext)_localctx).stmt =  ((StatContext)_localctx).ifstat.stmt;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuestionContext extends ParserRuleContext {
		public Object stmt;
		public Token ID;
		public Token STRING;
		public Token TYPE;
		public AssignContext b;
		public AssignContext assign;
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public TerminalNode ID() { return getToken(QLCheckedParser.ID, 0); }
		public TerminalNode STRING() { return getToken(QLCheckedParser.STRING, 0); }
		public TerminalNode TYPE() { return getToken(QLCheckedParser.TYPE, 0); }
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_question);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); ((QuestionContext)_localctx).ID = match(ID);
			setState(43); match(2);
			setState(44); ((QuestionContext)_localctx).STRING = match(STRING);
			setState(45); ((QuestionContext)_localctx).TYPE = match(TYPE);
			setState(47);
			_la = _input.LA(1);
			if (_la==LP) {
				{
				setState(46); ((QuestionContext)_localctx).b = ((QuestionContext)_localctx).assign = assign();
				}
			}

			if(((QuestionContext)_localctx).b != null){ ((QuestionContext)_localctx).stmt =  stmtBuilder.question((((QuestionContext)_localctx).ID!=null?((QuestionContext)_localctx).ID.getText():null),(((QuestionContext)_localctx).STRING!=null?((QuestionContext)_localctx).STRING.getText():null),TypeFactory.createType((((QuestionContext)_localctx).TYPE!=null?((QuestionContext)_localctx).TYPE.getText():null)),((QuestionContext)_localctx).assign.exp);} else {((QuestionContext)_localctx).stmt =  stmtBuilder.question((((QuestionContext)_localctx).ID!=null?((QuestionContext)_localctx).ID.getText():null),(((QuestionContext)_localctx).STRING!=null?((QuestionContext)_localctx).STRING.getText():null),TypeFactory.createType((((QuestionContext)_localctx).TYPE!=null?((QuestionContext)_localctx).TYPE.getText():null)));};
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Checked_questionContext extends ParserRuleContext {
		public Object stmt;
		public String questionID = "";
		public Token ID;
		public Token STRING;
		public Token TYPE;
		public CheckContext b;
		public CheckContext check;
		public TerminalNode ID() { return getToken(QLCheckedParser.ID, 0); }
		public CheckContext check() {
			return getRuleContext(CheckContext.class,0);
		}
		public TerminalNode STRING() { return getToken(QLCheckedParser.STRING, 0); }
		public TerminalNode TYPE() { return getToken(QLCheckedParser.TYPE, 0); }
		public Checked_questionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_checked_question; }
	}

	public final Checked_questionContext checked_question() throws RecognitionException {
		Checked_questionContext _localctx = new Checked_questionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_checked_question);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); ((Checked_questionContext)_localctx).ID = match(ID);
			((Checked_questionContext)_localctx).questionID =  (((Checked_questionContext)_localctx).ID!=null?((Checked_questionContext)_localctx).ID.getText():null);
			setState(53); match(2);
			setState(54); ((Checked_questionContext)_localctx).STRING = match(STRING);
			setState(55); ((Checked_questionContext)_localctx).TYPE = match(TYPE);
			setState(56); match(5);
			setState(57); ((Checked_questionContext)_localctx).b = ((Checked_questionContext)_localctx).check = check();
			((Checked_questionContext)_localctx).stmt =  stmtBuilder.checked_question((((Checked_questionContext)_localctx).ID!=null?((Checked_questionContext)_localctx).ID.getText():null),(((Checked_questionContext)_localctx).STRING!=null?((Checked_questionContext)_localctx).STRING.getText():null),TypeFactory.createType((((Checked_questionContext)_localctx).TYPE!=null?((Checked_questionContext)_localctx).TYPE.getText():null)),((Checked_questionContext)_localctx).check.exp);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public Object exp;
		public ExprContext a;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode LP() { return getToken(QLCheckedParser.LP, 0); }
		public TerminalNode RP() { return getToken(QLCheckedParser.RP, 0); }
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); match(LP);
			setState(61); ((AssignContext)_localctx).a = expr(0);
			setState(62); match(RP);
			((AssignContext)_localctx).exp =  ((AssignContext)_localctx).a.exp;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CheckContext extends ParserRuleContext {
		public Object exp;
		public Check_exprContext a;
		public TerminalNode LP() { return getToken(QLCheckedParser.LP, 0); }
		public TerminalNode RP() { return getToken(QLCheckedParser.RP, 0); }
		public Check_exprContext check_expr() {
			return getRuleContext(Check_exprContext.class,0);
		}
		public CheckContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_check; }
	}

	public final CheckContext check() throws RecognitionException {
		CheckContext _localctx = new CheckContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_check);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); match(LP);
			setState(66); ((CheckContext)_localctx).a = check_expr();
			setState(67); match(RP);
			((CheckContext)_localctx).exp =  ((CheckContext)_localctx).a.exp;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfstatContext extends ParserRuleContext {
		public Object stmt;
		public ExprContext a;
		public StatContext stat;
		public List<StatContext> b = new ArrayList<StatContext>();
		public ElsestatContext c;
		public ElsestatContext elsestat;
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode LB() { return getToken(QLCheckedParser.LB, 0); }
		public ElsestatContext elsestat() {
			return getRuleContext(ElsestatContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RB() { return getToken(QLCheckedParser.RB, 0); }
		public TerminalNode LP() { return getToken(QLCheckedParser.LP, 0); }
		public TerminalNode RP() { return getToken(QLCheckedParser.RP, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public IfstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifstat; }
	}

	public final IfstatContext ifstat() throws RecognitionException {
		IfstatContext _localctx = new IfstatContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ifstat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); match(3);
			setState(71); match(LP);
			setState(72); ((IfstatContext)_localctx).a = expr(0);
			setState(73); match(RP);
			setState(74); match(LB);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==3 || _la==ID) {
				{
				{
				setState(75); ((IfstatContext)_localctx).stat = stat();
				((IfstatContext)_localctx).b.add(((IfstatContext)_localctx).stat);
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81); match(RB);
			setState(83);
			_la = _input.LA(1);
			if (_la==4) {
				{
				setState(82); ((IfstatContext)_localctx).c = ((IfstatContext)_localctx).elsestat = elsestat();
				}
			}

			if(((IfstatContext)_localctx).c != null){ ((IfstatContext)_localctx).stmt =  stmtBuilder.iffelse(((IfstatContext)_localctx).a.exp,composeStmt(((IfstatContext)_localctx).b),((IfstatContext)_localctx).elsestat.stmt);} else { ((IfstatContext)_localctx).stmt =  stmtBuilder.iff(((IfstatContext)_localctx).a.exp,composeStmt(((IfstatContext)_localctx).b));};
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElsestatContext extends ParserRuleContext {
		public List<Object> stmt;
		public StatContext stat;
		public List<StatContext> a = new ArrayList<StatContext>();
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode LB() { return getToken(QLCheckedParser.LB, 0); }
		public TerminalNode RB() { return getToken(QLCheckedParser.RB, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public ElsestatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elsestat; }
	}

	public final ElsestatContext elsestat() throws RecognitionException {
		ElsestatContext _localctx = new ElsestatContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_elsestat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); match(4);
			setState(88); match(LB);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==3 || _la==ID) {
				{
				{
				setState(89); ((ElsestatContext)_localctx).stat = stat();
				((ElsestatContext)_localctx).a.add(((ElsestatContext)_localctx).stat);
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95); match(RB);
			((ElsestatContext)_localctx).stmt =  composeStmt(((ElsestatContext)_localctx).a);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Object exp;
		public ExprContext a;
		public Token BOOL;
		public Token STRING;
		public Token INT;
		public Token ID;
		public ExprContext b;
		public TerminalNode GEQ() { return getToken(QLCheckedParser.GEQ, 0); }
		public TerminalNode MUL() { return getToken(QLCheckedParser.MUL, 0); }
		public TerminalNode INT() { return getToken(QLCheckedParser.INT, 0); }
		public TerminalNode AND() { return getToken(QLCheckedParser.AND, 0); }
		public TerminalNode LP() { return getToken(QLCheckedParser.LP, 0); }
		public TerminalNode OR() { return getToken(QLCheckedParser.OR, 0); }
		public TerminalNode ID() { return getToken(QLCheckedParser.ID, 0); }
		public TerminalNode RP() { return getToken(QLCheckedParser.RP, 0); }
		public TerminalNode MIN() { return getToken(QLCheckedParser.MIN, 0); }
		public TerminalNode EQ() { return getToken(QLCheckedParser.EQ, 0); }
		public TerminalNode ADD() { return getToken(QLCheckedParser.ADD, 0); }
		public TerminalNode NEQ() { return getToken(QLCheckedParser.NEQ, 0); }
		public TerminalNode BOOL() { return getToken(QLCheckedParser.BOOL, 0); }
		public TerminalNode DIV() { return getToken(QLCheckedParser.DIV, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode LT() { return getToken(QLCheckedParser.LT, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode NOT() { return getToken(QLCheckedParser.NOT, 0); }
		public TerminalNode LEQ() { return getToken(QLCheckedParser.LEQ, 0); }
		public TerminalNode GT() { return getToken(QLCheckedParser.GT, 0); }
		public TerminalNode STRING() { return getToken(QLCheckedParser.STRING, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			switch (_input.LA(1)) {
			case NOT:
				{
				setState(99); match(NOT);
				setState(100); ((ExprContext)_localctx).a = expr(17);
				((ExprContext)_localctx).exp =  exprBuilder.not(((ExprContext)_localctx).a.exp);
				}
				break;
			case LP:
				{
				setState(103); match(LP);
				setState(104); ((ExprContext)_localctx).a = expr(0);
				setState(105); match(RP);
				((ExprContext)_localctx).exp =  ((ExprContext)_localctx).a.exp;
				}
				break;
			case BOOL:
				{
				setState(108); ((ExprContext)_localctx).BOOL = match(BOOL);
				((ExprContext)_localctx).exp =  exprBuilder.bool(Boolean.parseBoolean((((ExprContext)_localctx).BOOL!=null?((ExprContext)_localctx).BOOL.getText():null)));
				}
				break;
			case STRING:
				{
				setState(110); ((ExprContext)_localctx).STRING = match(STRING);
				((ExprContext)_localctx).exp =  exprBuilder.string((((ExprContext)_localctx).STRING!=null?((ExprContext)_localctx).STRING.getText():null));
				}
				break;
			case INT:
				{
				setState(112); ((ExprContext)_localctx).INT = match(INT);
				((ExprContext)_localctx).exp =  exprBuilder.lit((((ExprContext)_localctx).INT!=null?Integer.valueOf(((ExprContext)_localctx).INT.getText()):0));
				}
				break;
			case ID:
				{
				setState(114); ((ExprContext)_localctx).ID = match(ID);
				((ExprContext)_localctx).exp =  exprBuilder.var((((ExprContext)_localctx).ID!=null?((ExprContext)_localctx).ID.getText():null));
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(180);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(178);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(118);
						if (!(precpred(_ctx, 16))) throw new FailedPredicateException(this, "precpred(_ctx, 16)");
						setState(119); match(MUL);
						setState(120); ((ExprContext)_localctx).b = expr(17);
						((ExprContext)_localctx).exp =  exprBuilder.mul(((ExprContext)_localctx).a.exp,((ExprContext)_localctx).b.exp);
						}
						break;

					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(123);
						if (!(precpred(_ctx, 15))) throw new FailedPredicateException(this, "precpred(_ctx, 15)");
						setState(124); match(DIV);
						setState(125); ((ExprContext)_localctx).b = expr(16);
						((ExprContext)_localctx).exp =  exprBuilder.div(((ExprContext)_localctx).a.exp,((ExprContext)_localctx).b.exp);
						}
						break;

					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(128);
						if (!(precpred(_ctx, 14))) throw new FailedPredicateException(this, "precpred(_ctx, 14)");
						setState(129); match(ADD);
						setState(130); ((ExprContext)_localctx).b = expr(15);
						((ExprContext)_localctx).exp =  exprBuilder.add(((ExprContext)_localctx).a.exp,((ExprContext)_localctx).b.exp);
						}
						break;

					case 4:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(133);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(134); match(MIN);
						setState(135); ((ExprContext)_localctx).b = expr(14);
						((ExprContext)_localctx).exp =  exprBuilder.sub(((ExprContext)_localctx).a.exp,((ExprContext)_localctx).b.exp);
						}
						break;

					case 5:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(138);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(139); match(LT);
						setState(140); ((ExprContext)_localctx).b = expr(13);
						((ExprContext)_localctx).exp =  exprBuilder.lt(((ExprContext)_localctx).a.exp,((ExprContext)_localctx).b.exp);
						}
						break;

					case 6:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(143);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(144); match(LEQ);
						setState(145); ((ExprContext)_localctx).b = expr(12);
						((ExprContext)_localctx).exp =  exprBuilder.leq(((ExprContext)_localctx).a.exp,((ExprContext)_localctx).b.exp);
						}
						break;

					case 7:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(148);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
